--- a/aboutus.html
+++ b/aboutus.html
@@ -17,7 +17,7 @@
 <body>
     <nav class="navbar navbar-dark navbar-expand-sm fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="#">Ristorante con Fusion</a>
+            <a class="navbar-brand" href="./index.html"><img src="img/logo.png" height="30" width="41"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Navbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -39,7 +39,8 @@
                     <h1>Ristorante con Fusion</h1>
                     <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
                 </div>
-                <div class="col-12 col-sm">
+                <div class="col-12 col-sm align-self-center">
+                    <img src="img/logo.png" class="img-fluid">
                 </div>
             </div>
         </div>
@@ -65,7 +66,7 @@
             </div>
             <div class="col-sm">
                 <div class="card">
-                    <h3 class="card-header bg-primary text-white">Facts At a Glance</h3>
+                    <h3 class="card-header text-white" style="background-color: #9575CD;">Facts At a Glance</h3>
                     <div class="card-body">
                         <dl class="row">
                             <dt class="col-6">Started</dt>
