--- a/contactus.html
+++ b/contactus.html
@@ -144,7 +144,7 @@
                         </div>
                     </div>
                     <div class="form-group row">
-                        <label for="feedback" class="col-md-2 col-from-label">Feedback</label>
+                        <label for="feedback" class="col-md-2 col-form-label">Feedback</label>
                         <div class="col-md-10">
                             <textarea class="form-control" id="feedback" name="feedback"
                                 placeholder="Share what's on your mind" rows="12"></textarea>
