--- a/index.html
+++ b/index.html
@@ -39,8 +39,11 @@
                     <h1>Ristorante con Fusion</h1>
                     <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
                 </div>
-                <div class="col-12 col-sm align-self-center">
-                        <img src="img/logo.png" class="img-fluid">
+                <div class="col-12 col-sm-3 align-self-center">
+                    <img src="img/logo.png" class="img-fluid">
+                </div>
+                <div class="col-12 col-sm-3 align-self-center text-center">
+                    <a class="btn btn-sm btn-block btn-warning" href="#reservation-form" style="width: 10rem;">Reserve Table</a>
                 </div>
             </div>
         </div>
@@ -55,7 +58,10 @@
                 <div class="media">
                     <img class="d-flex mr-3 img-thumbnail align-self-center" src="img/uthappizza.png" alt="pizza like object">
                     <div class="media-body">
-                        <h2 class="mt-0 ">Uthappizza</h2>
+                        <h2 class="mt-0 ">Uthappizza
+                            <span class="badge badge-danger">HOT</span>
+                            <span class="badge badge-pill badge-secondary">$4.99</span>
+                        </h2>
                         <p class="d-none d-sm-block content">A unique combination of Indian Uthappam (pancake) and Italian pizza, topped with Cerignola olives, ripe vine cherry tomatoes, Vidalia onion, Guntur chillies and Buffalo Paneer.</p>
                     </div>
                 </div>
@@ -68,8 +74,16 @@
                 <h3 class="title">This Month's Promotions</h3>
             </div>
             <div class="col col-sm-8 col-md-9">
-                <h2>Weekend Grand Buffet</h2>
-                <p class="d-none d-sm-block content">Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
+                <div class="media">
+                    <div class="media-body">
+                        <h2 class="mt-0">
+                            Weekend Grand Buffet
+                            <span class="badge badge-danger">NEW</span>
+                        </h2>
+                        <p class="d-none d-sm-block content">Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
+                    </div>
+                    <img src="img/buffet.png" class="d-flex ml-3 img-thumbnail align-self-center" alt="multiple food objects">
+                </div>
             </div>
         </div>
 
@@ -88,6 +102,62 @@
                 </div>
             </div>
         </div>
+
+        <div class="row row-content">
+            <div id="reservation-form" class="card col-sm-8 offset-sm-2">
+                <h3 class="card-header bg-warning text-white text-bold">
+                    Reserve a Table
+                </h3>
+                <div class="card-body">
+                    <form>
+                        <div class="form-group row">
+                            <label class="col-lg-2 col-form-label" for="guestcount">Number of Guests</label>
+                            <div class="form-check-inline">
+                                <div class="col-sm-2">
+                                    <input type="radio" class="form-check-input"  name="guestcount" id="guestcount">
+                                    <label class="form-check-label">1</label>
+                                </div>
+                                <div class="col-sm-2">
+                                    <input type="radio" class="form-check-input"  name="guestcount" id="guestcount">
+                                    <label class="form-check-label">2</label>
+                                </div>
+                                <div class="col-sm-2">
+                                    <input type="radio" class="form-check-input"  name="guestcount" id="guestcount">
+                                    <label class="form-check-label">3</label>
+                                </div>
+                                <div class="col-sm-2">
+                                    <input type="radio" class="form-check-input"  name="guestcount" id="guestcount">
+                                    <label class="form-check-label">4</label>
+                                </div>
+                                <div class="col-sm-2">
+                                    <input type="radio" class="form-check-input"  name="guestcount" id="guestcount">
+                                    <label class="form-check-label">5</label>
+                                </div>
+                                <div class="col-sm-2">
+                                    <input type="radio" class="form-check-input"  name="guestcount" id="guestcount">
+                                    <label class="form-check-label">6</label>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label class="col-lg-2 col-form-label" for="date">Date and Time</label>
+                            <div class="col-lg-5">
+                                <input type="text" class="form-control" placeholder="Date" id="date" name="date">
+                            </div>
+                            <div class="col-lg-5">
+                                <input type="text" class="form-control" placeholder="Time" id="time" name="time">
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <div class="col-sm-2 offset-md-2 offset-8">
+                                <button type="submit" class="btn bg-primary text-white">Reserve</button>    
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+        
     </div>
 
     <footer class="footer">
