--- a/index.html
+++ b/index.html
@@ -29,9 +29,44 @@
                     <li class="nav-item"><a class="nav-link" href=""><span class="fa fa-list fa-lg"></span> Menu</a></li>
                     <li class="nav-item"><a class="nav-link" href="./contactus.html"><span class="fa fa-address-card fa-lg"></span> Contact</a></li>
                 </ul>
+                <span class="navbar-text">
+                    <a data-toggle="modal" data-target="#loginModal">
+                        <span class="fa fa-sign-in fa-lg"></span> Login
+                    </a>
+                </span>
             </div>
         </div>
     </nav>
+
+    <div id="loginModal" class="modal fade" role="dialog">
+        <div class="modal-dialog modal-lg bg-white" role="content">
+            <div class="model-content">
+                <div class="modal-header">
+                    <h4 class="modal-title">Login</h4>
+                    <button type="button" class=" btn close" data-dismiss="modal">&times;</button>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <div class="form-group row">
+                            <label class="col-form-label col-sm-5" for="credEmail">Email Address</label>
+                            <input type="email" class="col-sm-6 form-control form-control-sm mr-1"
+                                    id="credEmail" placeholder="Enter Email">
+                        </div>
+                        <div class="form-group row">
+                            <label class="col-form-label col-sm-5" for="credPass">Password</label>
+                            <input type="password" class="col-sm-6 form-control form-control-sm mr-1"
+                                    id="credPass" placeholder="Enter Password">
+                        </div>
+                        <div class="form-group row">
+                            <button type="submit" class="col-sm-4 offset-7 btn btn-pill bg-primary text-white">
+                                Sign in</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <header class="jumbotron">
         <div class="container">
             <div class="row row-header">
@@ -43,10 +78,12 @@
                     <img src="img/logo.png" class="img-fluid">
                 </div>
                 <div class="col-12 col-sm-3 align-self-center text-center">
-                    <a class="btn btn-sm btn-block btn-warning" href="#reservation-form" style="width: 10rem;">Reserve Table</a>
+                    <a class="btn btn-sm btn-block btn-warning" data-toggle="tooltip" data-html="true"
+                     title="Or Call us at <br><strong>+852 12345678</strong>" data-placement="bottom"
+                     href="#reservation-form" style="width: 10rem;">Reserve Table</a>
                 </div>
             </div>
-        </div>
+        </div>   
     </header>
 
     <div class="container">
@@ -206,6 +243,11 @@
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script>
+        $(document).ready(function() {
+            $('[data-toggle="tooltip"]').tooltip();
+        })
+    </script>
 </body>
 
 </html>
