--- a/index.html
+++ b/index.html
@@ -123,17 +123,22 @@
                         </div>
                         <div class="form-group row">
                             <label class="col-lg-2 col-form-label" for="date">Date and Time</label>
-                            <div class="col-lg-5">
+                            <div class="col-lg-3">
                                 <input type="text" class="form-control" placeholder="Date" id="date" name="date">
                             </div>
-                            <div class="col-lg-5">
+                            <div class="col-lg-3">
                                 <input type="text" class="form-control" placeholder="Time" id="time" name="time">
                             </div>
                         </div>
                         <div class="form-group row">
-                            <div class="col-sm-2 offset-md-2 offset-8">
+                            <div class="offset-lg-2 offset-7 col-2 col-lg-1">
+                                <button type="button" class="btn bg-secondary" data-target="#reservationModal"
+                                 data-toggle="modal">Cancel</button>
+                            </div>
+                            <div class="col-2 col-lg-1 ml-lg-3">
                                 <button type="submit" class="btn bg-primary text-white">Reserve</button>    
                             </div>
+            
                         </div>
                     </form>
                 </div>
