--- a/index.html
+++ b/index.html
@@ -131,11 +131,11 @@
                             </div>
                         </div>
                         <div class="form-group row">
-                            <div class="offset-lg-2 offset-7 col-2 col-lg-1">
+                            <div class="offset-sm-2 offset-5 col-2 col-sm-1">
                                 <button type="button" class="btn bg-secondary" data-target="#reservationModal"
                                  data-toggle="modal">Cancel</button>
                             </div>
-                            <div class="col-2 col-lg-1 ml-lg-3">
+                            <div class="col-2 col-sm-1 ml-sm-3 offset-1">
                                 <button type="submit" class="btn bg-primary text-white">Reserve</button>    
                             </div>
             
@@ -210,6 +210,14 @@
                     <a class="carousel-control-next" href="#Carousel" role="button" data-slide="next">
                         <span class="carousel-control-next-icon"></span>
                     </a>
+                    <div class="btn-group" id="carouselButton">
+                        <button class="btn btn-danger btn-sm" id="carousel-pause">
+                            <span class="fa fa-pause"></span>
+                        </button>
+                        <button class="btn btn-danger btn-sm" id="carousel-play">
+                            <span class="fa fa-play"></span>
+                        </button>
+                    </div>
                 </div>
             </div>
         </div>
@@ -272,9 +280,9 @@
                     <h5>Links</h5>
                     <ul class="list-unstyled">
                         <li><a href="#">Home</a></li>
-                        <li><a href="#">About</a></li>
+                        <li><a href="./aboutus.html">About</a></li>
                         <li><a href="#">Menu</a></li>
-                        <li><a href="#">Contact</a></li>
+                        <li><a href="./contactus.html">Contact</a></li>
                     </ul>
                 </div>
                 <div class="col-7 col-sm-5">
@@ -311,6 +319,17 @@
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script>
+        $(document).ready(function() {
+            $('#Carousel').carousel({ interval: 500 });
+            $('#carousel-pause').click(function() {
+                $('#Carousel').carousel('pause');
+            });
+            $('#carousel-play').click(function() {
+                $('#Carousel').carousel('cycle');
+            });
+        });
+    </script>
 </body>
 
 </html>
