--- a/index.html
+++ b/index.html
@@ -210,14 +210,9 @@
                     <a class="carousel-control-next" href="#Carousel" role="button" data-slide="next">
                         <span class="carousel-control-next-icon"></span>
                     </a>
-                    <div class="btn-group" id="carouselButton">
-                        <button class="btn btn-danger btn-sm" id="carousel-pause">
-                            <span class="fa fa-pause"></span>
-                        </button>
-                        <button class="btn btn-danger btn-sm" id="carousel-play">
-                            <span class="fa fa-play"></span>
-                        </button>
-                    </div>
+                    <button class="btn btn-danger btn-sm" id="carouselButton">
+                        <span class="fa fa-pause"></span>
+                    </button>
                 </div>
             </div>
         </div>
@@ -322,11 +317,17 @@
     <script>
         $(document).ready(function() {
             $('#Carousel').carousel({ interval: 500 });
-            $('#carousel-pause').click(function() {
-                $('#Carousel').carousel('pause');
-            });
-            $('#carousel-play').click(function() {
-                $('#Carousel').carousel('cycle');
+            $('#carouselButton').click(function() {
+                if($('#carouselButton').children('span').hasClass('fa-pause')) {
+                    $('#Carousel').carousel('pause');
+                    $('#carouselButton').children('span').removeClass('fa-pause');
+                    $('#carouselButton').children('span').addClass('fa-play');
+                }
+                else if($('#carouselButton').children('span').hasClass('fa-play')){
+                    $('#Carousel').carousel('cycle');
+                    $('#carouselButton').children('span').removeClass('fa-play');
+                    $('#carouselButton').children('span').addClass('fa-pause');
+                }
             });
         });
     </script>
