--- a/aboutus.html
+++ b/aboutus.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>Ristorante Con Fusion: About Us</title>
-
+    <!-- build:css css/main.css -->
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css">
     <link rel="stylesheet" href="css/styles.css">
-
+    <!-- endbuild -->
 </head>
 
 <body>
@@ -28,9 +28,123 @@
                     <li class="nav-item"><a class="nav-link" href=""><span class="fa fa-list fa-lg"> </span> Menu</a></li>
                     <li class="nav-item"><a class="nav-link" href="./contactus.html"><span class="fa fa-address-card fa-lg"></span> Contact</a></li>
                 </ul>
+                <span class="navbar-text">
+                    <a id="loginButton">
+                        <span class="fa fa-sign-in fa-lg"></span> Login
+                    </a>
+                </span>
             </div>
         </div>
     </nav>
+
+    <div id="loginModal" class="modal fade" role="dialog">
+        <div class="modal-dialog modal-lg bg-white" role="content">
+            <div class="model-content">
+                <div class="modal-header">
+                    <h4 class="modal-title">Login</h4>
+                    <button type="button" class=" btn close" data-dismiss="modal">&times;</button>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <div class="form-group row">
+                            <label class="col-form-label col-sm-5" for="credEmail">Email Address</label>
+                            <input type="email" class="col-sm-6 form-control form-control-sm mr-1"
+                                    id="credEmail" placeholder="Enter Email">
+                        </div>
+                        <div class="form-group row">
+                            <label class="col-form-label col-sm-5" for="credPass">Password</label>
+                            <input type="password" class="col-sm-6 form-control form-control-sm mr-1"
+                                    id="credPass" placeholder="Enter Password">
+                        </div>
+                        <div class="form-group row">
+                            <button type="submit" class="col-sm-4 offset-7 btn btn-pill bg-primary text-white">
+                                Sign in</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div id="reservationModal" class="modal fade" role="dialog">
+        <div class="modal-dialog modal-lg" role="content">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h3 class="text-white text-bold">Reserve a Table</h3>
+                    <button type="button" class="btn close text-white text-large" data-dismiss="modal">
+                        &times;
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <div class="form-group row">
+                            <label class="col-lg-2 col-form-label" for="guestcount">Number of Guests</label>
+                            <div class="form-check-inline">
+                                <div class="col-sm-2">
+                                    <input type="radio" class="form-check-input"  name="guestcount" id="guestcount">
+                                    <label class="form-check-label">1</label>
+                                </div>
+                                <div class="col-sm-2">
+                                    <input type="radio" class="form-check-input"  name="guestcount" id="guestcount">
+                                    <label class="form-check-label">2</label>
+                                </div>
+                                <div class="col-sm-2">
+                                    <input type="radio" class="form-check-input"  name="guestcount" id="guestcount">
+                                    <label class="form-check-label">3</label>
+                                </div>
+                                <div class="col-sm-2">
+                                    <input type="radio" class="form-check-input"  name="guestcount" id="guestcount">
+                                    <label class="form-check-label">4</label>
+                                </div>
+                                <div class="col-sm-2">
+                                    <input type="radio" class="form-check-input"  name="guestcount" id="guestcount">
+                                    <label class="form-check-label">5</label>
+                                </div>
+                                <div class="col-sm-2">
+                                    <input type="radio" class="form-check-input"  name="guestcount" id="guestcount">
+                                    <label class="form-check-label">6</label>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label class="col-lg-2 col-form-label" for="section">
+                                Section
+                            </label>
+                            <div class="btn-group btn-group-toggle col-lg-8 ml-1" data-toggle="buttons">
+                                <label class="btn btn-success active">
+                                    <input type="radio" name="section" id="section" checked>
+                                    Non-smoking
+                                </label>
+                                <label class="btn btn-danger">
+                                    <input type="radio" name="section" id="section">
+                                    Smoking
+                                </label>
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label class="col-lg-2 col-form-label" for="date">Date and Time</label>
+                            <div class="col-lg-3">
+                                <input type="text" class="form-control" placeholder="Date" id="date" name="date">
+                            </div>
+                            <div class="col-lg-3">
+                                <input type="text" class="form-control" placeholder="Time" id="time" name="time">
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <div class="offset-sm-2 offset-5 col-2 col-sm-1">
+                                <button type="button" class="btn bg-secondary" data-target="#reservationModal"
+                                 data-toggle="modal">Cancel</button>
+                            </div>
+                            <div class="col-2 col-sm-1 ml-sm-3 offset-1">
+                                <button type="submit" class="btn bg-primary text-white">Reserve</button>    
+                            </div>
+            
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+
 
     <header class="jumbotron">
         <div class="container">
@@ -39,11 +153,15 @@
                     <h1>Ristorante con Fusion</h1>
                     <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
                 </div>
-                <div class="col-12 col-sm align-self-center">
+                <div class="col-12 col-sm-3 align-self-center">
                     <img src="img/logo.png" class="img-fluid">
                 </div>
+                <div class="col-12 col-sm-3 align-self-center text-center">
+                    <button type="button" id="reserveTableButton" class="btn btn-sm btn-block btn-warning"
+                     style="width: 10rem;">Reserve Table</a>
+                </div>
             </div>
-        </div>
+        </div>   
     </header>
 
     <div class="container">
@@ -241,9 +359,12 @@
         </div>
     </footer>
      <!-- jQuery first, then Popper.js, then Bootstrap JS. -->
+     <!--  build:js js/main.js-->
      <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
      <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
      <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+     <script src="./js/scripts.js"></script>
+     <!-- endbuild -->
     
 </body>
 
